--- a/index.ipynb
+++ b/index.ipynb
@@ -42,8 +42,7 @@
    "outputs": [],
    "source": [
     "def calculate_cdf(lst, X):\n",
-    "    count = 0\n",
-    "    for x\n",
+    "    return count\n",
     "\n",
     "# test data\n",
     "test_lst = [1,2,3]\n",
