--- a/index.ipynb
+++ b/index.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "def calculate_cdf(lst, X):\n",
-    "    count = []\n",
+    "    count = [i for]\n",
     "\n",
     "# test data\n",
     "test_lst = [1,2,3]\n",
