--- a/index.ipynb
+++ b/index.ipynb
@@ -42,7 +42,8 @@
    "outputs": [],
    "source": [
     "def calculate_cdf(lst, X):\n",
-    "    count = [i for i in list if i ]\n",
+    "    count = [i for i in list if i < X]\n",
+    "    return \n",
     "\n",
     "# test data\n",
     "test_lst = [1,2,3]\n",
