Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "def calculate_cdf(lst, X):\n",
     "    count = [i for i in list if i < X]\n",
-    "    return \n",
+    "    return len(count)\n",
     "\n",
     "# test data\n",
     "test_lst = [1,2,3]\n",
