--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "def calculate_cdf(lst, X):\n",
     "    count = [i for i in list if i < X]\n",
-    "    return len(count)\n",
+    "    return len(count) / len(lst)\n",
     "\n",
     "# test data\n",
     "test_lst = [1,2,3]\n",
