--- a/index.ipynb
+++ b/index.ipynb
@@ -37,23 +37,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3333333333333333"
+       "0.6666666666666666"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def calculate_cdf(lst, X):\n",
-    "    count = [i for i in lst if i < X]\n",
+    "    count = [i for i in lst if i <= X]\n",
     "    return len(count) / len(lst)\n",
     "\n",
     "# test data\n",
