--- a/index.ipynb
+++ b/index.ipynb
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "die_lst = [1,2,3,4,5,6]\n",
-    "die_cum = [calculate_cdf(die_)]\n",
+    "die_cum = [calculate_cdf(die_lst, x) for x]\n",
     "\n",
     "die_cum\n",
     "\n",
