--- a/index.ipynb
+++ b/index.ipynb
@@ -84,12 +84,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.16666666666666666,\n",
+       " 0.3333333333333333,\n",
+       " 0.5,\n",
+       " 0.6666666666666666,\n",
+       " 0.8333333333333334,\n",
+       " 1.0]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "die_lst = [1,2,3,4,5,6]\n",
-    "die_cum = [calculate_cdf(die_lst, x) for x]\n",
+    "die_cum = [calculate_cdf(die_lst, x) for x in die_lst]\n",
     "\n",
     "die_cum\n",
     "\n",
