Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "def calculate_cdf(lst, X):\n",
     "    count = [i for i in lst if i <= X]\n",
-    "    return len(count) / len(lst)\n",
+    "    return round(len(count) / len(lst), 3)\n",
     "\n",
     "# test data\n",
     "test_lst = [1,2,3]\n",
