--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import mat"
+   ]
   },
   {
    "cell_type": "code",
