--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mat"
+    "import matplotlib.pylot as plt\n",
+    "\n"
    ]
   },
   {
