--- a/index.ipynb
+++ b/index.ipynb
@@ -124,7 +124,8 @@
    "outputs": [],
    "source": [
     "import matplotlib.pylot as plt\n",
-    "\n"
+    "\n",
+    "plt.stem"
    ]
   },
   {
