Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -125,7 +125,7 @@
    "source": [
     "import matplotlib.pylot as plt\n",
     "\n",
-    "plt.stem"
+    "plt.stem(die_lst, die)"
    ]
   },
   {
