Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -119,13 +119,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<StemContainer object of 3 artists>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import matplotlib.pylot as plt\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matpl\n",
     "\n",
-    "plt.stem(die_lst, die)"
+    "plt.stem(die_lst, die_cum)"
    ]
   },
   {
