Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,7 @@
     "plt.style.use('ggplot')\n",
     "\n",
     "plt.stem(die_lst, die_cum, linefmt=\"o-\")\n",
-    "\n",
+    "plt.title(\"Die Roll - Cumulative Distribution\")\n",
     "plt.show()"
    ]
   },
