Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,9 @@
     "plt.style.use('ggplot')\n",
     "\n",
     "plt.stem(die_lst, die_cum, linefmt=\"o-\")\n",
-    "plt.title(\"Die Roll - Cumulative Distribution\")\n",
+    "plt.title(\"Die Roll - Cumulative Distribution Function\")\n",
+    "plt.xlabel(\"Die values\")\n",
+    "plt.ylabel(\"\")\n",
     "plt.show()"
    ]
   },
