--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,9 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "plt.step(np.cumsum())"
+   ]
   },
   {
    "cell_type": "markdown",
