Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "plt.step(np.cumsum(die_lst))"
+    "plt.step(np.cumsum(die_lst),)"
    ]
   },
   {
